--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>盒子模型练习</title>
         <link rel="stylesheet" href="https://jwang1919.github.io/Unit-4-Lesson-2-Box-Model-Practice/secret.css">
-        <link rel="stylesheet" href="/.styles.css/">
+        <link rel="stylesheet" href="/.styles.css"/>
     </head>
         <body>
         <h2>盒子模型练习</h2>
